--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navigation">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation"
+    app:startDestination="@id/subscriberFragment">
 
+    <fragment
+        android:id="@+id/subscriberFragment"
+        android:name="br.com.grsoft.mysubscribers.ui.subscriber.SubscriberFragment"
+        android:label="@string/subscriber_title"
+        tools:layout="@layout/subscriber_fragment" />
 </navigation>
