--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -3,11 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/subscriberFragment">
+    app:startDestination="@id/subscriberListFragment">
 
     <fragment
         android:id="@+id/subscriberFragment"
         android:name="br.com.grsoft.mysubscribers.ui.subscriber.SubscriberFragment"
         android:label="@string/subscriber_title"
         tools:layout="@layout/subscriber_fragment" />
+    <fragment
+        android:id="@+id/subscriberListFragment"
+        android:name="br.com.grsoft.mysubscribers.ui.subscriberlist.SubscriberListFragment"
+        android:label="@string/subscriber_list_title"
+        tools:layout="@layout/subscriber_list_fragment" />
 </navigation>
